# tonnere

./: README.md
board/: README.md
board/datasheets/: 10cl040.xls
board/kicad/tonnere/: Microcontroller.kicad_sch  atariinterfaces.kicad_sch  audio.kicad_sch  cycloneve.kicad_sch  esp32.kicad_sch  fp-info-cache  fp-lib-table  io_cards.kicad_sch  power.kicad_sch  ram.kicad_sch  serial.kicad_sch  tonnere.kicad_dru  tonnere.kicad_prl  tonnere.kicad_pro  tonnere.kicad_sch  usb.kicad_sch  video.kicad_sch
board/pin_mappings/: ESP32_pinlist.csv  ESP32_pinlist.html  ESP32_pinlist.md  ESP32_pinlist.xlsx  STM32F407_CubeMX_pinlist.html  STM32F407_CubeMX_pinlist.md  STM32F407_alt_function_mapping.csv  STM32F407_alt_function_mapping.md  U30_pin_assignments_from_netlist_tweaked3_si5351numbered.qsf  U30_pin_assignments_mapping_tweaked3_si5351numbered.csv  thunder_u30_pins_entity.vhd  tonnere.net  validation_report.txt
board/production/: README.md
board/production/0.51/: JLCPCB_ACTUAL_BOM.xls  JLCPCB_ACTUAL_BOM_with_VLOOKUP.xls  JLCPCB_POS_adj2.csv  errata.txt  tonnere_prototype_prod_0.51-B_Cu.gbr  tonnere_prototype_prod_0.51-B_Mask.gbr  tonnere_prototype_prod_0.51-B_Paste.gbr  tonnere_prototype_prod_0.51-B_Silkscreen.gbr  tonnere_prototype_prod_0.51-Edge_Cuts.gbr  tonnere_prototype_prod_0.51-F_Cu.gbr  tonnere_prototype_prod_0.51-F_Mask.gbr  tonnere_prototype_prod_0.51-F_Paste.gbr  tonnere_prototype_prod_0.51-F_Silkscreen.gbr  tonnere_prototype_prod_0.51-In1_Cu.gbr  tonnere_prototype_prod_0.51-In2_Cu.gbr  tonnere_prototype_prod_0.51-In3_Cu.gbr  tonnere_prototype_prod_0.51-In4_Cu.gbr  tonnere_prototype_prod_0.51-NPTH.drl  tonnere_prototype_prod_0.51-PTH.drl  tonnere_prototype_prod_0.51-job.gbrjob
firmware/: README.md  logstm.sh
firmware/stm32testproject/: .mxproject  CMakeLists.txt  flash  stm32testproject.ioc
firmware/stm32testproject/Core/Inc/: stm32f4xx_hal_conf.h
firmware/stm32testproject/Core/Src/: main.c  main.c_MODIFIED  stm32f4xx_hal_msp.c
firmware/stm32testproject/EWARM/: Project.eww  stm32testproject.ewd  stm32testproject.ewp
firmware/stm32testproject/cmake/stm32cubemx/: CMakeLists.txt
firmware/stm32testusbproject/: .mxproject  CMakeLists.txt  CMakeLists.txt_GOLDEN  stm32testusbproject.ioc  stm32testusbproject.txt
firmware/stm32testusbproject/AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos.h  app_azure_rtos_config.h  logger.c  logger.cv1  logger.h  thread_memtest.c  thread_memtest.h  thread_toggle.c  thread_toggle.h
firmware/stm32testusbproject/Core/Inc/: RTE_Components.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/stm32testusbproject/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
firmware/stm32testusbproject/Middlewares/ST/usbx/common/usbx_host_classes/src/: ux_host_class_hid_keyboard_activate.c  ux_host_class_hid_keyboard_deactivate.c  ux_host_class_hub_change_detect.c  ux_host_class_hub_change_process.c  ux_host_class_hub_port_change_connection_process.c  ux_host_class_hub_port_change_process.c  ux_host_class_hub_transfer_request_completed.c
firmware/stm32testusbproject/Middlewares/ST/usbx/common/usbx_stm32_host_controllers/: ux_hcd_stm32_endpoint_destroy.c
firmware/stm32testusbproject/USBX/App/: app_usbx_host.c  ux_host_keyboard.c  ux_host_mouse.c  ux_user.h
firmware/stm32testusbproject/cmake/stm32cubemx/: CMakeLists.txt
rtl/: README.md
rtl/test/: altddio_out1.ppf  altddio_out1.qip  altddio_out1.vhd  audio_sine_sweep.vhdl  convert.cof  ddr_pattern_gen.vhd  font_rom_8x8.vhd  i2smaster.vhdl  io_square_test.vhdl  pixel_fifo.cmp  pixel_fifo.qip  pixel_fifo.vhd  pll_aud.cmp  pll_aud.ppf  pll_aud.qip  pll_aud.vhd  pll_hdmi.cmp  pll_hdmi.ppf  pll_hdmi.qip  pll_hdmi.vhd  pll_vdac.cmp  pll_vdac.ppf  pll_vdac.qip  pll_vdac.vhd  pll_video.cmp  pll_video.ppf  pll_video.qip  pll_video.vhd  sdm_dac_video.vhd  sdm_dac_video_tb.vhd  sdm_level_gen.vhd  sdm_level_gen.vhd_timing_best_but_still_fails_timing  sdm_level_gen_rgb.vhd  test_pattern_generator.vhd  text_rom_3x40.vhd  tonnere.map  tonnere.qpf  tonnere.qsf  tonnere.qsf_pre_bodge  tonnere.sdc  (+8 more)
